--- a/marketplace/programs/marketplace/Cargo.toml
+++ b/marketplace/programs/marketplace/Cargo.toml
@@ -20,3 +20,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 [dependencies]
 anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
 anchor-spl = {version = "0.31.0", features = ["metadata"]}
+proc-macro2 = "=1.0.94"
