--- a/sol-parking-marketplace/programs/marketplace/Cargo.toml
+++ b/sol-parking-marketplace/programs/marketplace/Cargo.toml
@@ -21,3 +21,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
 anchor-spl = {version = "0.31.0", features = ["metadata"]}
 proc-macro2 = "=1.0.94"
+switchboard-on-demand = "0.3.5"
