--- a/sol-parking-marketplace/programs/marketplace/Cargo.toml
+++ b/sol-parking-marketplace/programs/marketplace/Cargo.toml
@@ -14,11 +14,13 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+idl-build = ["anchor-lang/idl-build"]
 
 
 [dependencies]
 anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
-anchor-spl = {version = "0.31.0", features = ["metadata"]}
+# anchor-spl = "0.31.0"
 proc-macro2 = "=1.0.94"
-switchboard-on-demand = "0.3.5"
+# switchboard-on-demand = "0.1.12"
+switchboard-on-demand = "0.2.0"
