--- a/panorama-parking-marketplace/Anchor.toml
+++ b/panorama-parking-marketplace/Anchor.toml
@@ -11,9 +11,13 @@ marketplace = "FXUQwDsKJNrYFsfiUokPbH4BSrZtoC9m8HpoiMvYxtSE"
 [registry]
 url = "https://api.apr.dev"
 
+#[provider]
+#cluster = "localnet"
+#wallet = "~/.config/solana/id.json"
+
 [provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+cluster = "Devnet"
+wallet = "./HTurbin3-wallet.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
