--- a/capstone/vercel-depin-parking/package.json
+++ b/capstone/vercel-depin-parking/package.json
@@ -12,10 +12,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.74.7",
     "@wallet-ui/react": "1.1.0-canary-20250415034938",
     "@wallet-ui/tailwind": "1.1.0-canary-20250415034938",
