--- a/capstone/shuttle-axum/Cargo.toml
+++ b/capstone/shuttle-axum/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shuttle-axum"
+name = "shuttle-axum-restapi"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,9 +7,14 @@ publish = false
 [dependencies]
 axum = "0.7.3"
 serde = { version = "1.0.219", features = ["derive"] }
+# shuttle-axum = "0.37.0"
 shuttle-axum = { version = "0.55.0", default-features = false, features = ["axum-0-7"] }
 shuttle-runtime = "0.55.0"
+# shuttle-runtime = "0.37.0"
 shuttle-shared-db = { version = "0.55.0", features = ["sqlx", "postgres"] }
+# shuttle-shared-db = { version = "0.37.0", features = ["postgres"] }
 sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
+# sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
+
 tokio = "1.28.2"
 tower-http = { version = "0.5.0", features = ["fs"] }
