--- a/capstone/create-solana-dapp-legacy-next-tailwind/package.json
+++ b/capstone/create-solana-dapp-legacy-next-tailwind/package.json
@@ -30,6 +30,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "jotai": "^2.12.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
