--- a/capstone/frontend/package.json
+++ b/capstone/frontend/package.json
@@ -26,6 +26,8 @@
     "@solana/wallet-adapter-react": "0.15.38",
     "@solana/wallet-adapter-react-ui": "0.9.38",
     "@solana/web3.js": "1.98.2",
+    "@switchboard-xyz/common": "^3.4.2",
+    "@switchboard-xyz/solana.js": "^3.2.5",
     "@tanstack/react-query": "^5.74.7",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
